--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx demon index.js"
+    "dev": "npx nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "chalk": "^5.4.1",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.9.0"
   }
 }
